crates/kaban-parser/tests/snapshots/statements__impl_decl_with_no_generics_and_constaint.snap
---
source: crates/kaban-parser/tests/statements.rs
expression: print
---
input: 
    impl Talks for Person::Core {
        pub const NUMBER: u8 = 10;

        pub func walk(self&, steps: i32) {
            self.step(steps);
        }

        func step(step: i32) -> i32 {
            return step;
        }

        func default_talk(self&, message: c8);
    }
    

Block [
    ImplForDeclWithNoGeneric {
        is_pub: false,
        impl_name: Identifier("Core"),
        self_type: NamedType(
            Identifier("Person"),
        ),
        interface: NamedType(
            Identifier("Talks"),
        ),
        statements: [
            Const {
                is_pub: true,
                name: Identifier("NUMBER"),
                type: Type(U8),
                assignment: IntLit("10"),
            },
            FuncDeclWithNoGeneric {
                is_pub: true,
                name: Identifier("walk"),
                params: [
                    SelfParam(
                        Ampersand("&"),
                    ),
                    Param {
                        binding: IdentifierBinding {
                            name: Identifier("steps"),
                            mutable: false,
                        },
                        type: Type(I32),
                    },
                ],
                return_type: "NONE",
                body: Block [
                    MethodCall {
                        callee: Self_,
                        method name: Identifier("step"),
                        is mutable: false,
                        args: [
                            Identifier("steps"),
                        ],
                    },
                ],
            },
            FuncDeclWithNoGeneric {
                is_pub: false,
                name: Identifier("step"),
                params: [
                    Param {
                        binding: IdentifierBinding {
                            name: Identifier("step"),
                            mutable: false,
                        },
                        type: Type(I32),
                    },
                ],
                return_type: Type(I32),
                body: Block [
                    Return(
                        Identifier("step"),
                    ),
                ],
            },
            FuncNoBodyWithNoGeneric {
                is_pub: false,
                name: Identifier("default_talk"),
                params: [
                    SelfParam(
                        Ampersand("&"),
                    ),
                    Param {
                        binding: IdentifierBinding {
                            name: Identifier("message"),
                            mutable: false,
                        },
                        type: Type(C8),
                    },
                ],
                return_type: "NONE",
            },
        ],
    },
]
